--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ngrx/entity": "13.2.0",
     "@ngrx/store": "13.2.0",
     "@ngrx/store-devtools": "13.2.0",
     "rxjs": "~7.5.0",
